@@ -19,7 +19,8 @@
 parse_Rd <- function(file, srcfile = NULL, encoding = "unknown",
                      verbose = FALSE, fragment = FALSE,
                      warningCalls = TRUE, 
-                     macros = file.path(R.home("share"), "Rd", "macros", "system.Rd"))
+                     macros = file.path(R.home("share"), "Rd", "macros", "system.Rd"),
+		     permissive = FALSE)
 {
     if(is.character(file)) {
         file0 <- file
@@ -75,9 +76,21 @@ parse_Rd <- function(file, srcfile = NULL, encoding = "unknown",
     
     warndups <- config_val_to_logical(Sys.getenv("_R_WARN_DUPLICATE_RD_MACROS_", "FALSE"))
 
-    result <- .External2(C_parseRd, tcon, srcfile, "UTF-8",
+    if (permissive) 
+	# FIXME:  this should test for a special class of warning rather than testing the
+	#         message, but those are currently not easily generated from C code.
+	result <- withCallingHandlers(.External2(C_parseRd, tcon, srcfile, "UTF-8",
+                            verbose, basename, fragment, warningCalls, macros, warndups),
+		       warning = function(w) 
+			    if (grepl("unknown macro", conditionMessage(w)))
+				invokeRestart("muffleWarning") )
+    else
+	result <- .External2(C_parseRd, tcon, srcfile, "UTF-8",
                          verbose, basename, fragment, warningCalls, macros, warndups)
-    expandDynamicFlags(result)
+    result <- expandDynamicFlags(result)
+    if (permissive)
+	result <- permissify(result)
+    result
 }
 
 print.Rd <- function(x, deparse = FALSE, ...)
@@ -170,3 +183,39 @@ as.character.Rd <- function(x, deparse = FALSE, ...)
 
 deparseRdElement <- function(element, state)
     .Call(C_deparseRd, element, state)
+    
+# Convert unknown tags into text displaying the tag with braces if necessary
+# This allows unknown LateX macros to be embedded in the text, and to be just passed
+# through.
+
+permissify <- function(Rd) {  
+    tags <- RdTags(Rd)
+    oldclass <- class(Rd)
+    oldsrcref <- getSrcref(Rd)
+    oldtag <- attr(Rd, "Rd_tag")
+    i <- 0
+    while (i < length(tags)) {
+        i <- i+1
+   	if (tags[i] == "UNKNOWN") {
+   	    Rd[[i]] <- tagged(Rd[[i]], "TEXT", getSrcref(Rd[[i]]))
+            while (i < length(tags)) {
+		if (tags[i+1] == "LIST") {
+		    Rd <- c(Rd[seq_len(i)], list(tagged("{", "TEXT", getSrcref(Rd[[i+1]]))), 
+		                        permissify(Rd[[i+1]]), 
+            	                        list(tagged("}", "TEXT", getSrcref(Rd[[i+1]]))), 
+			    Rd[seq_along(Rd)[-seq_len(i+1)]])
+		    tags <- RdTags(Rd)
+		    i <- i+3
+		} else if (tags[i+1] == "TEXT" && grepl("^ *$", Rd[[i+1]]))
+		    i <- i + 1
+		else
+		    break
+            }
+        } else if (is.recursive(Rd[[i]]))
+            Rd[[i]] <- permissify(Rd[[i]])
+    }
+    class(Rd) <- oldclass
+    attr(Rd, "srcref") <- oldsrcref
+    attr(Rd, "Rd_tag") <- oldtag
+    Rd
+}
